--- a/Index(GeneralList)(Eng).HTML
+++ b/Index(GeneralList)(Eng).HTML
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Главная строница</title>
+    <title>Главная страница</title>
     <link rel="shortcut icon" href="imgPNG/logo.png.png" type="image/x-icon">
     <link href="StileIndex(GeneralList).css" rel="stylesheet" type="text/css">
 </head>
